fixed some layout issues

--- a/app/pick-categories/styles.styl
+++ b/app/pick-categories/styles.styl
@@ -7,7 +7,7 @@ pick-categories
 
     h1
         flex-shrink 0
-        font-size font-size-xl
+        font-size font-size-l
         text-align center
         margin size-m 0
         line-height 1.5
@@ -26,6 +26,7 @@ pick-categories
             align-items flex-start
             align-content flex-start
             padding size-s size-m
+            overflow-y auto
 
             li.category
                 position relative
