--- a/app/setup-teams/styles.styl
+++ b/app/setup-teams/styles.styl
@@ -7,7 +7,7 @@ setup-teams
 
     h1
         flex-shrink 0
-        font-size font-size-xl
+        font-size font-size-l
         text-align center
         margin size-m 0
         line-height 1.5
